--- a/Library.csproj
+++ b/Library.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="BibliothequeDataSet.xsc">
       <DependentUpon>BibliothequeDataSet.xsd</DependentUpon>
@@ -151,6 +152,15 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\library_archives_icon_123492.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1488576911_BgLibrary030317_01.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\istockphoto-543350202-612x612.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
